--- a/package.json
+++ b/package.json
@@ -1,25 +1,24 @@
 {
-	"name": "nova",
+	"name": "benjlu",
 	"version": "1.0.0",
-	"description": "Mythic is a next-generation starter theme designed to help theme authors write elegant, intelligent, and modern code.",
-	"author": "Justin Tadlock",
-	"license": "GPL-2.0+",
-	"homepage": "https://themehybrid.com/themes/mythic",
-	"main": "resources/js/app.js",
-	"scripts": {
-		"build": "npm run prod && npm run i18n && npm run export",
-		"dev": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-		"watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-		"watch:sync": "cross-env sync=1 NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-		"hot": "cross-env sync=1 NODE_ENV=development webpack-dev-server --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-		"prod": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
-	},
+	"description": "benjlu is a custom flat content manage system based alembic core.",
+	"main": "resources/assets/js/app.js",
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/justintadlock/mythic.git"
+		"url": "git+https://github.com/benlumia007/benjlu.git"
 	},
+	"author": "Benjamin Lu",
+	"license": "GPL-2.0+",
 	"bugs": {
-		"url": "https://github.com/justintadlock/mythic/issues"
+		"url": "https://github.com/benlumia007/benjlu/issues"
+	},
+	"homepage": "https://github.com/benlumia007/benjlu#readme",
+	"scripts": {
+		"build": "npm run prod && npm run export",
+		"dev": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+		"watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+		"prod": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+		"export": "cross-env export=1 NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
 	},
 	"devDependencies": {
 		"cross-env": "^7.0.3",
@@ -30,6 +29,5 @@
 		"sass": "^1.32.0",
 		"sass-loader": "^8.0.2",
 		"vue-template-compiler": "^2.6.12"
-	},
-	"dependencies": {}
+	}
 }
