--- a/.htaccess
+++ b/.htaccess
@@ -1,10 +1,12 @@
-RewriteEngine on
+RewriteEngine On
+RewriteCond %{SERVER_PORT} 80
+RewriteRule ^(.*)$ https://benjlu.com/$1 [R,L]
 
 RewriteBase /
 
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)/$ $1 [L,R]
 
+RewriteRule ^(.*)/$ $1 [L,R]
 RewriteCond %{REQUEST_FILENAME} !-l
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
