--- a/.github/workflows/benjlu.yml
+++ b/.github/workflows/benjlu.yml
@@ -16,3 +16,5 @@ jobs:
         run: composer install
       - name: step four
         run: npm run build
+      - name: step five
+        run: mv benjlu ~/public_html
