--- a/.github/workflows/benjlu.yml
+++ b/.github/workflows/benjlu.yml
@@ -15,8 +15,8 @@ jobs:
       - name: step three
         run: npm install
       - name: step four
-        run: sed -i -e "s/benjlu.test/benjlu.com/g" "app/functions-config.php"
-      - name: step five
         run: npm run build
+      - name: step five
+        run: sed -i -e "s/benjlu.test/benjlu.com/g" "benjlu/app/functions-config.php"
       - name: step six
         run: rsync -r benjlu/* ~/public_html
